# expense_tracker

./: .gitignore  README.md  package-lock.json  package.json
backend/: API_DOCUMENTATION.md  future.txt  postman_collection.json  pyproject.toml
backend/src/: __init__.py  app.py  config.py  database.py  models.py  schemas.py
backend/src/auth/: __init__.py  dependencies.py  exceptions.py  google_oauth.py  jwt.py
backend/src/integrations/: __init__.py  plaid.py
backend/src/routers/: __init__.py  account.py  ai.py  auth.py  budget.py  categories.py  expenses.py  payment_methods.py  plaid.py  protected.py  transactions.py
backend/src/routers/analytics/: __init__.py  transactions.py
backend/src/schemas/: analytics_schemas.py  base.py  budget.py  category_schemas.py  payment_method_schemas.py  plaid.py
backend/src/utils/: __init__.py  analytics_helper.py  error_messages.py  mongo_types.py  recalculate_user_balance.py
frontend/: App.js  app.json  metro.config.js  package-lock.json  package.json
frontend/src/components/: TransactionsDetail.js
frontend/src/config/: apiConfig.js
frontend/src/navigation/: AppNavigator.js
frontend/src/screens/: AccountsScreen.js  AddExpenseScreen.js  BackUpSettings.js  CategoriesScreen.js  CategoriesSettings.js  HomeScreen.js  IncomeSource.js  IncomeSourceScreen.js  LoginScreen.js  PaymentMethods.js  PaymentSettings.js  ProfileScreen.js  ProfileSettings.js  SecuritySettings.js  SettingsScreen.js  SignupScreen.js  StatisticsScreen.js  SubscriptionScreen.js
frontend/src/services/: analyticsService.js  apiService.js  authService.js  baseApi.js  categoriesService.js  tokenService.js  transactionsService.js  userService.js
frontend/src/theme/: ThemeContext.js  ThemeProvider.js  colors.js
