[project]
name = "expense-tracker-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

authors = [
    { name = "Egor", email = "Egorkagorin04@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.29.0",
    "fastapi[standard]>=0.115.12",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "passlib[bcrypt]>=1.7.4",
]
entrypoint = "src.app:app"
