[project]
name = "expense-tracker-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

authors = [
    { name = "Egor", email = "Egorkagorin04@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beanie==1.29.0",
    "fastapi[standard]==0.115.12",
    "pydantic[email]==2.11.3",
    "pydantic-settings==2.8.1",
    "passlib[bcrypt]==1.7.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==4.3.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "click==8.1.8",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi-cli==0.0.7",
    "google-auth==2.38.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "lazy-model==0.2.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "motor==3.7.0",
    "nulltype==2.3.1",
    "plaid-python==29.1.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic-core==2.33.1",
    "pygments==2.19.1",
    "pymongo==4.12.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "rich==14.0.0",
    "rich-toolkit==0.14.1",
    "rsa==4.9",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "toml==0.10.2",
    "typer==0.15.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=44.0.2",
    "pyjwt>=2.10.1",
    "openai>=1.74.0",
    "requests>=2.32.3",
]
